--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,11 @@ theme:
   logo: assets/logo.png
   favicon: assets/favicon.ico
   features:
+    - content.code.copy
     - content.footnote.tooltips
+
+extra_css:
+  - stylesheets/extra.css
 
 plugins:
   - search
@@ -36,6 +40,12 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
