--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ theme:
   features:
     - content.code.copy
     - content.footnote.tooltips
+    - content.tooltips
 
 extra_css:
   - stylesheets/extra.css
