Отключение лишней информации в футере
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,9 @@ theme:
     - content.footnote.tooltips
     - content.tooltips
 
+extra:
+  generator: false
+
 extra_css:
   - stylesheets/extra.css
 
