Добавлена навигация и дата изменения в footer
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ theme:
     - content.code.copy
     - content.footnote.tooltips
     - content.tooltips
+    - navigation.footer
 
 extra:
   generator: false
@@ -34,6 +35,8 @@ extra_javascript:
   - javascripts/extra.js
 
 plugins:
+  - git-revision-date-localized:
+      type: timeago
   - search
 
 markdown_extensions:
