Добавлен раздел "мультимедиа"
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
           - Тормозная система: 5g/service/brake-system.md
           - Колеса и диски: 5g/service/wheels.md
       - Руководства: 5g/downloads.md
+  - Мультимедиа: multimedia.md
   - Полезные ссылки: links.md
 
 theme:
