--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,8 @@ nav:
           - Вариатор: 5g/service/variator.md
           - Тормозная система: 5g/service/brake-system.md
           - Колеса и диски: 5g/service/wheels.md
+      - Диагностика и настройка:
+          - Бортовой компьютер: 5g/setup/board-computer.md
       - Руководства: 5g/downloads.md
   - Мультимедиа: multimedia.md
   - Полезные ссылки: links.md
@@ -65,7 +67,10 @@ markdown_extensions:
       line_spans: __span
       pygments_lang_class: true
   - pymdownx.inlinehilite
-  - pymdownx.snippets
+  - pymdownx.keys
+  - pymdownx.snippets:
+      auto_append:
+        - includes/abbreviations.md
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
