--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
           - Колеса и диски: 5g/service/wheels.md
       - Диагностика и настройка:
           - Бортовой компьютер: 5g/setup/board-computer.md
+          - Климат-контроль: 5g/setup/climate-control.md
       - Руководства: 5g/downloads.md
   - Мультимедиа: multimedia.md
   - Полезные ссылки: links.md
