Add manifest json and icons
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ theme:
   custom_dir: overrides
   language: ru
   logo: assets/logo.png
-  favicon: /assets/favicon.ico
+  favicon: /favicon.ico
   features:
     - content.code.copy
     - content.footnote.tooltips
