Добавлен раздел с сервисами
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
           - Климат-контроль: 5g/setup/climate-control.md
       - Руководства: 5g/downloads.md
   - Мультимедиа: multimedia.md
-  - Полезные ссылки: links.md
+  - Полезные контакты: contacts.md
 
 theme:
   name: material
