Добавлен раздел со ссылками на документацию и различные ресурсы
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ nav:
       - Диагностика и настройка:
           - Бортовой компьютер: 5g/setup/board-computer.md
           - Климат-контроль: 5g/setup/climate-control.md
-      - Руководства: 5g/downloads.md
+      - Библиотека: 5g/library.md
   - Мультимедиа: multimedia.md
   - Полезные контакты: contacts.md
 
