--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Honda Stepwgn
-site_description: База знаний Honda Stepwgn RP1, RP2, RP3, RP4, RP5
+site_description: База знаний Honda Stepwgn 5го поколения (RP1, RP2, RP3, RP4, RP5). Информация о комплектациях, обслуживании, расходниках, инструкции и руководства пользователя
 site_url: https://stepwgn.github.io/
 
 nav:
