--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "workbox-cli": "^7.3.0"
   },
   "scripts": {
     "postinstall": "pip install mkdocs mkdocs-material mkdocs-git-revision-date-localized-plugin mkdocs-include-markdown-plugin \"mkdocs-material[imaging]\"",
     "build": "mkdocs build && npx workbox generateSW workbox-config.js",
     "start": "mkdocs serve",
-    "start-pwa": "npm run build && python3 -m http.server 8000 --directory site/"
+    "start-pwa": "npm run build && python3 -m http.server 8000 --directory site/",
+    "deploy": "gh-pages -d site"
   }
 }
