Add navigation settings
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,10 @@ theme:
     - content.footnote.tooltips
     - content.tooltips
     - navigation.footer
+    - navigation.sections
+    - navigation.tabs
+    - navigation.top
+    - toc.follow
 
 extra:
   analytics:
